# nyx-sdk

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  README.sdk.md  RELEASE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  publish-testpypi.yaml  publish.yaml
docs/: index.rst
examples/: README.md  requirements.txt
examples/advanced/: advanced.ipynb  chat_interface.html
examples/advanced/evaluate/: README.md  config.py  evaluate.py
examples/advanced/multiple_content_types/: README.md  agent.py  chat.py  requirements.txt
examples/advanced/rag_api/: README.md  app.py
examples/advanced/rag_with_judge/: README.md  app.py
examples/advanced/rag_with_sources/: README.md  app.py
examples/high_level/: highlevel.ipynb  highlevel.py
nyx_client/: Makefile  README.md  __init__.py  client.py  data.py  demo.py  pyproject.toml  test.csv  utils.py
nyx_client/cli/: common.py  init_env.py
nyx_client/docs/: changelog.rst  conf.py  index.rst
nyx_client/extensions/: langchain.py
nyx_client/nyx_client/: __init__.py  circles.py  client.py  configuration.py  connection.py  data.py  ontology.py  property.py  utils.py
nyx_client/nyx_client/cli/: __main__.py  init_env.py
nyx_client/tests/: helpers.py  test_client.py  test_config.py  test_configuration.py  test_data.py  test_utils.py
nyx_extras/: .readthedocs.yaml  Makefile  README.md  pyproject.toml
nyx_extras/docs/: changelog.rst  conf.py  index.rst  requirements.txt
nyx_extras/nyx_extras/: __init__.py  langchain.py  utils.py
nyx_extras/tests/: test_langchain.py  test_utils.py
nyx_old/: __init__.py  host_client.py  identity_auth.py  utils.py
nyx_old/extensions/: __init__.py
test/: __init__.py  test_client.py  test_configuration.py  test_data.py  test_utils.py
